Fixes gray overlay on open menu on mobile view

--- a/styles.css
+++ b/styles.css
@@ -104,7 +104,7 @@ body {
   top: 0;
   right: 0;
   left: 0;
-  position: absolute;
+  position: fixed;
   z-index: 1;
 }
 
@@ -426,6 +426,7 @@ body {
     flex-direction: column;
     align-items: center;
     height: 100%;
+
   }
 
   .menu-header-icon {
